2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/14_WhileAvecBolcVide.deca
// Description:
//    Programme  while dont la condition est un boolean et avec un bloc vide
//
// Resultats:
//      programme correcte syntaxiquement 
//
// Historique:
//    cree le 09/01/2024
{
    while(true){}
}