2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/18_WhileSansBloc.deca
// Description:
//    tests de programme while sans bloc d'instruction
// Resultats:
//    ligne 10  : Error  missing '{' at '}'
//
// Historique:
//    cree le 09/01/2024
{
    while(true)
}